patina_smbios: add SMBIOS component (#980)
## Description

Adds a new SMBIOS component for managing SMBIOS tables and records in
UEFI environments with type-safe Rust APIs and EDKII compatibility.

- [x] Impacts functionality?
- [ ] Impacts security?
- [ ] Breaking change?
- [x] Includes tests?
- [x] Includes documentation?

### Features
#### Core Functionality
- **SMBIOS 3.9 Support** - Implements SMBIOS 3.9 specification
(configurable for 3.x versions)
- **Type-Safe Record API** - `add_record<T>()` with compile-time
validation using Rust type system
- **Configuration Table Publication** - Publishes SMBIOS 3.x entry point
and tables to UEFI Configuration Table
- **EDKII-Compatible Protocol** - C FFI layer implementing EDK2 SMBIOS
protocol interface (Add, UpdateString, Remove, GetNext)
- **Thread-Safe Operations** - TPL_NOTIFY synchronization via `TplMutex`
for timer-interrupt safety

(skip cargo release dry run)

## How This Was Tested

Unit test: `cargo test`

Integration tests: `cargo make q35`
- Boots QEMU with Q35 platform
- SMBIOS component initializes and publishes table
- C Protocol FFI tests execute and log results
- Use 'smbiosview' in UEFI Shell to verify published records

C Protocol FFI Layer tests:
  - `Add` - Raw byte-level record addition via C protocol
  - `UpdateString` - String modification via C protocol  
  - `Remove` - Record deletion via C protocol
  - `GetNext` - Record enumeration via C protocol
  - Error handling - Operations on invalid/removed handles
 
Sample:
```
        let protocol = unsafe { &*(protocol_ptr as *const SmbiosProtocol) };

        // Test 1: Add a record using the C protocol Add function
        log::info!("  Test 1: Protocol Add function...");
        let test_record = Self::create_test_type2_record();
        let mut handle: SmbiosHandle = 0;
        
        let status = (protocol.add)(
            protocol,
            core::ptr::null_mut(), // producer_handle
            &mut handle,
            test_record.as_ptr()

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ patina_macro = { version = "14.1.1", path = "sdk/patina_macro" }
 patina_mtrr = { version = "1.0.0" }
 patina_paging = { version = "10" }
 patina_performance = { version = "14.1.1", path = "components/patina_performance" }
+patina_smbios = { version = "14.1.1", path = "components/patina_smbios" }
 patina_stacktrace = { version = "14.1.1", path = "core/patina_stacktrace" }
 proc-macro2 = { version = "1" }
 quote = { version = "1" }
