--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   ci_workflow:
     name: Run
-    uses: OpenDevicePartnership/patina-devops/.github/workflows/CiWorkflow.yml@v0.0.4
+    uses: OpenDevicePartnership/patina-devops/.github/workflows/CiWorkflow.yml@personal/joeyvagedes/optimize
     with:
       build-tasks: "build,build-x64,build-aarch64"
       mdbook-path: "docs"
