--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -30,5 +30,5 @@ jobs:
       build-tasks: "build,build-x64,build-aarch64"
       mdbook-path: "docs"
       run-cargo-vet: false
-      run-release-dry-run: ${{ !contains(github.event.pull_request.body, '(skip cargo release dry run)') }}
+      run-release-dry-run: ${{ !contains(github.event.pull_request.body, '- [x] Creates a new crate?') }}
     secrets: inherit
