--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   ci_workflow:
     name: Run
-    uses: OpenDevicePartnership/patina-devops/.github/workflows/CiWorkflow.yml@v0.0.4
+    uses: OpenDevicePartnership/patina-devops/.github/workflows/CiWorkflow.yml@v0.1.0
     with:
       build-tasks: "build,build-x64,build-aarch64"
       mdbook-path: "docs"
@@ -34,7 +34,7 @@ jobs:
     secrets: inherit
   mdbook_docs_test:
     name: Run
-    uses: OpenDevicePartnership/patina-devops/.github/workflows/MdbookWorkflow.yml@personal/joeyvagedes/mdbook
+    uses: OpenDevicePartnership/patina-devops/.github/workflows/MdbookWorkflow.yml@0.1.0
     with:
       mdbook-path: "docs"
       build-cmd: cargo make build-lib
