--- a/.github/workflows/ReleaseTomlPr.yml
+++ b/.github/workflows/ReleaseTomlPr.yml
@@ -9,6 +9,7 @@ jobs:
     permissions:
       contents: write
       actions: read
+      pull-requests: write
 
     steps:
       - name: ✅ Checkout Repository ✅
@@ -17,13 +18,13 @@ jobs:
       - name: 🛠️ Download Rust Tools 🛠️
         uses: OpenDevicePartnership/patina-devops/.github/actions/rust-tool-cache@main
 
-      - name: Generate Token
-        id: app-token
-        uses: actions/create-github-app-token@v2
-        with:
-          app-id: ${{ secrets.PATINA_AUTOMATION_APPLICATION_ID }}
-          private-key: ${{ secrets.PATINA_AUTOMATION_APPLICATION_PRIVATE_KEY }}
-          owner: ${{ github.repository_owner }}
+      # - name: Generate Token
+      #   id: app-token
+      #   uses: actions/create-github-app-token@v2
+      #   with:
+      #     app-id: ${{ secrets.PATINA_AUTOMATION_APPLICATION_ID }}
+      #     private-key: ${{ secrets.PATINA_AUTOMATION_APPLICATION_PRIVATE_KEY }}
+      #     owner: ${{ github.repository_owner }}
 
       - name: Get Release Tag
         id: release_tag
@@ -60,7 +61,7 @@ jobs:
       - name: Create or Update Pull Request
         uses: actions/github-script@v7
         with:
-          github-token: ${{ steps.app-token.outputs.token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const defaultBranch = context.payload.repository.default_branch;
             const headBranch = "github-actions/release-version-update";
