--- a/.github/workflows/triage-issues.yml
+++ b/.github/workflows/triage-issues.yml
@@ -1,5 +1,5 @@
 # This workflow assists with initial triage of new issues by applying
-# labels based on data provided in the issue.
+# labels based on data provided in the issue.asdf
 #
 # Copyright (c) Microsoft Corporation.
 # SPDX-License-Identifier: Apache-2.0
