--- a/.github/workflows/crate-version-updater.yml
+++ b/.github/workflows/crate-version-updater.yml
@@ -10,6 +10,10 @@
 name: Create Crate Version Update PR
 
 on:
+  workflow_run:
+    workflows: ["Update Release Draft"]
+    types: ["completed"]
+
   workflow_dispatch:
 
 jobs:
@@ -18,6 +22,8 @@ jobs:
     uses: ./.github/workflows/CrateVersionUpdater.yml
     with:
       ignore-prefix: 'patina-v'
+      create-pr: ${{ github.event_name == 'workflow_dispatch' }}
+
     secrets: inherit
     permissions:
       contents: write
