--- a/.github/workflows/ReleaseWorkflow.yml
+++ b/.github/workflows/ReleaseWorkflow.yml
@@ -46,6 +46,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      actions: read
+
     needs: check-default-branch
 
     if: ${{ needs.check-default-branch.outputs.is-default-branch == 'true' }}
@@ -59,19 +63,19 @@ jobs:
       - name: 🛠️ Download Rust Tools 🛠️
         uses: OpenDevicePartnership/patina-devops/.github/actions/rust-tool-cache@main
 
-      - name: Generate Token
-        id: app-token
-        uses: actions/create-github-app-token@v2
-        with:
-          app-id: ${{ secrets.PATINA_AUTOMATION_APPLICATION_ID }}
-          private-key: ${{ secrets.PATINA_AUTOMATION_APPLICATION_PRIVATE_KEY }}
-          owner: ${{ github.repository_owner }}
+      # - name: Generate Token
+      #   id: app-token
+      #   uses: actions/create-github-app-token@v2
+      #   with:
+      #     app-id: ${{ secrets.PATINA_AUTOMATION_APPLICATION_ID }}
+      #     private-key: ${{ secrets.PATINA_AUTOMATION_APPLICATION_PRIVATE_KEY }}
+      #     owner: ${{ github.repository_owner }}
 
       - name: Get Release Tag
         id: release_tag
         uses: actions/github-script@v7
         with:
-          github-token: ${{ steps.app-token.outputs.token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const prefix = `${{ inputs.ignore-prefix }}`;
 
@@ -115,9 +119,9 @@ jobs:
           fi
 
       # Everything below here only runs if the version was actually updated in this merge commit.
-      - name: Login to Registry
-        if: steps.validate-version-updated.outputs.version-updated == 'true'
-        run: cargo login "${{ secrets.PATINA_CRATES_IO_TOKEN }}"
+      # - name: Login to Registry
+      #   if: steps.validate-version-updated.outputs.version-updated == 'true'
+      #   run: cargo login "${{ secrets.PATINA_CRATES_IO_TOKEN }}"
 
       - name: Publish to crates.io (Dry-Run)
         if: steps.validate-version-updated.outputs.version-updated == 'true'
@@ -128,7 +132,7 @@ jobs:
         if: steps.validate-version-updated.outputs.version-updated == 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ steps.app-token.outputs.token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const tag = "${{ steps.release_tag.outputs.tag }}";
             const draftId = "${{ steps.release_tag.outputs.draft_id }}";
@@ -142,7 +146,7 @@ jobs:
 
             core.info(`Published release ${tag}`);
 
-      - name: Publish to crates.io
-        if: steps.validate-version-updated.outputs.version-updated == 'true'
-        run: |
-          cargo release ${{ steps.release_tag.outputs.tag }} --x --no-tag --no-push --workspace
+      # - name: Publish to crates.io
+      #   if: steps.validate-version-updated.outputs.version-updated == 'true'
+      #   run: |
+      #     cargo release ${{ steps.release_tag.outputs.tag }} --x --no-tag --no-push --workspace
