Update to patina-devops v0.2.2
Updates the repository to patina-devops v0.2.2 which changes the release process as described in the release notes of patina-devops:

ref:
https://github.com/OpenDevicePartnership/patina-devops/releases/tag/v0.2.0

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -10,16 +10,14 @@
 name: Publish Release
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [ main ]
+    paths: [ Cargo.toml ]
 
 jobs:
   release:
     name: Release
-    uses: OpenDevicePartnership/patina-devops/.github/workflows/ReleaseWorkflow.yml@v0.1.1
+    uses: OpenDevicePartnership/patina-devops/.github/workflows/ReleaseWorkflow.yml@v0.2.2
     with:
       ignore-prefix: 'patina-v'
     secrets: inherit
-    permissions:
-      contents: write
-      actions: read
