--- a/sdk/patina_macro/Cargo.toml
+++ b/sdk/patina_macro/Cargo.toml
@@ -15,6 +15,9 @@ uuid = { workspace = true}
 syn = { workspace = true, features = ["full"] }
 quote = { workspace = true }
 proc-macro2 = { workspace = true }
+cargo_metadata = { workspace = true }
+cargo-cyclonedx = {workspace = true }
+cyclonedx-bom = "0.8.0"
 
 [dev-dependencies]
 # To avoid circular dependencies, cargo-release skips dev dependencies when evaluating the release order for
