--- a/patina_dxe_core/Cargo.toml
+++ b/patina_dxe_core/Cargo.toml
@@ -40,6 +40,7 @@ patina_debugger = { workspace = true }
 patina_internal_device_path = { workspace = true }
 patina_internal_depex = { workspace = true}
 patina_performance = { workspace = true }
+miniz_oxide = { version = "0.8.0", default-features = false, features = ["with-alloc"] }
 
 [build-dependencies]
 miniz_oxide = { version = "0.8.9" }
