patina_dxe_core: Make the `Core` struct static
This commit does the following two things, in accordance with RFC 22:

1. This commit moves platform configuration of the core into the
   `PlatformInfo` trait. This trait has multiple type associations for
   configuring the different subsystems of the core. As of this commit
   the following type associations exist:
   - `ComponentInfo` used to attach and configure patina components to
     be dispatched by the core.
   - `CpuInfo` used to configure cpu releated functionality such as the
     GIC Bases for AARCH64 systems.
   - `MemoryInfo` used to configure memory related functionality such as
     prioritizing 32 bit memory allocations.
2. This commit updates the Core to be a static in the binary. The entry
   point now requires a static reference to self. This ensures that all
   data lives for the lifetime of the program, reduces stack size, and
   paves the way for moving all statics into the core.

--- a/patina_dxe_core/Cargo.toml
+++ b/patina_dxe_core/Cargo.toml
@@ -52,6 +52,8 @@ patina_internal_collections = { path = "../core/patina_internal_collections" }
 env_logger = { workspace = true }
 mockall = { workspace = true }
 serial_test = { workspace = true }
+zerocopy = { workspace = true }
+zerocopy-derive = { workspace = true }
 
 [target.'cfg(all(target_arch="aarch64"))'.dependencies]
 arm-gic = { workspace = true }
